[BUG] Spacing Issue

--- a/src/app/components/styles/Journal.module.css
+++ b/src/app/components/styles/Journal.module.css
@@ -10,6 +10,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;;
 }
